--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,12 +1,11 @@
 FROM node:20-alpine
 
-# Security: run as non-root
 RUN addgroup -g 1001 -S nodejs && adduser -S nodeuser -u 1001
 
 WORKDIR /app
 
 COPY package*.json ./
-RUN npm ci --only=production && npm cache clean --force
+RUN npm ci --omit=dev && npm cache clean --force
 
 COPY src/ ./src/
 
