fix: point API URL to https via CloudFlare proxy

--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-VITE_API_URL=https://coreidentity.coreholdingcorp.com
+VITE_API_URL=https://api.coreidentity.coreholdingcorp.com
 VITE_APP_NAME=CoreIdentity
 VITE_COMPANY=Core Holding Corp
 VITE_ENVIRONMENT=production
