--- a/api/package.json
+++ b/api/package.json
@@ -19,7 +19,8 @@
     "jsonwebtoken": "^9.0.3",
     "morgan": "^1.10.0",
     "uuid": "^9.0.0",
-    "winston": "^3.11.0"
+    "winston": "^3.11.0",
+    "ago-1-core": "file:/data/data/com.termux/files/home/audit-workspace/ago-1-core"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
