--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -6,6 +6,8 @@ on:
     paths:
       - 'api/**'
       - '.github/workflows/deploy-api.yml'
+      - 'src/**'
+      - 'dist/**'
   workflow_dispatch:
 
 env:
